# e4_geant4_tutorial

./: .gitignore  Makefile  README.md  aFirstGeant4App  analysis.ipynb
aFirstGeant4App_code/: CMakeLists.txt  Makefile  main.cc
aFirstGeant4App_code/include/: ActionInitializations.hh  PrimaryGenerator.hh  SimulationWorld.hh
aFirstGeant4App_code/macros/: init.mac  run.mac  run_and_score.mac
aFirstGeant4App_code/src/: ActionInitializations.cc  PrimaryGenerator.cc  SimulationWorld.cc
macros/: placeholder.mac  run_and_score.mac
